force-app/main/default/objects/Account/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>TRIM(TEXT(Salutation__c) + &quot; &quot; + FirstName__c + &quot; &quot; + LastName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>