force-app/main/default/objects/Account/fields/MemberPlan__c.field-meta.xml
<CustomField>
    <fullName>MemberPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Plan</label>
    <referenceTo>MemberPlan__c</referenceTo>
    <relationshipLabel>Plan Members</relationshipLabel>
    <relationshipName>MemberPlan</relationshipName>
    <type>Lookup</type>
</CustomField>