force-app/main/default/objects/Account/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <label>National Provider Identifier (NPI)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>