force-app/main/default/objects/Account/fields/OpportunityLineItems__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItems__c</fullName>
    <label>Opportunity Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>