force-app/main/default/objects/Account/fields/ProviderSuffix__c.field-meta.xml
<CustomField>
    <fullName>ProviderSuffix__c</fullName>
    <label>Provider Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE-C</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>ATC</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>AuD</fullName>
            </value>
            <value>
                <fullName>CCC-A</fullName>
            </value>
            <value>
                <fullName>CCC-SLP</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>CCRN</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDTC</fullName>
            </value>
            <value>
                <fullName>CEN</fullName>
            </value>
            <value>
                <fullName>CFNP</fullName>
            </value>
            <value>
                <fullName>CGC</fullName>
            </value>
            <value>
                <fullName>ChD</fullName>
            </value>
            <value>
                <fullName>DCh</fullName>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>CHT</fullName>
            </value>
            <value>
                <fullName>CLE</fullName>
            </value>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>CNM</fullName>
            </value>
            <value>
                <fullName>CNP</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>CNSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>