force-app/main/default/objects/Account/validationRules/Enter_Account_First_and_Last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Account_First_and_Last_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(RecordTypeName__c = &quot;Patient&quot;, RecordTypeName__c = &quot;Provider&quot;),
  NOT(CONTAINS(Name, &quot; &quot;))
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter a valid first and last name.</errorMessage>
</ValidationRule>