force-app/main/default/objects/Account/validationRules/NPI_Must_Be_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>NPI_Must_Be_10_Digits</fullName>
    <active>true</active>
    <description>National Provider Number (NPI) must contain 10 digits.</description>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Provider&quot;,
  NOT(ISBLANK(NPI__c)),
  OR(
    NOT(ISNUMBER(NPI__c)),
    NOT(LEN(NPI__c) = 10)
  )
)</errorConditionFormula>
    <errorDisplayField>NPI__c</errorDisplayField>
    <errorMessage>National Provider Number (NPI) must contain 10 digits.</errorMessage>
</ValidationRule>