force-app/main/default/objects/Account/listViews/Providers.listView-meta.xml
<ListView>
    <fullName>Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FullName__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>equals</operation>
        <value>Provider</value>
    </filters>
    <label>Providers</label>
</ListView>